update swagger.json ,user controller
