# src/routes/userRoutes.ts
@@ -2,7 +2,6 @@ import express from "express";
 import {
   loginUser,
   registerUser,
-  sendEmailLink,
   userDetails,
 } from "../controllers/userController";
 import { authenticate } from "../Middleware/authenticateToken";
@@ -11,7 +10,7 @@ const router = express.Router();
 
 router.post("/register", registerUser);
 router.post("/login", loginUser);
-router.get("/login/userdetails",authenticate ,userDetails);
-router.post("/sendEmail",sendEmailLink)
+router.get("/login/userdetails", authenticate, userDetails);
+router.post("/sendEmail");
 
 export default router;
